# TuyaOpen_youkai

./: build.sh
apps/esp32/01_led/: flahs.sh
apps/esp32/01_led/src/: hello_world.c
apps/esp32/03_lvgl_display/: CMakeLists.txt  app_default.config
apps/esp32/03_lvgl_display/src/: 03_lvgl_display.c
apps/tuya_cloud/01_i2c/: Kconfig  app_default.config
apps/tuya_cloud/01_i2c/src/: 01_i2c.c  bh1750.c
apps/tuya_cloud/02_mic/: CMakeLists.txt
apps/tuya_cloud/02_mic/src/: example_recorder.c
apps/tuya_cloud/03_lvgl_display/src/: 03_lvgl_display.c
apps/tuya_cloud/03_lvgl_display/src/lvgl_ui/custom/: custom.c
boards/ESP32/ESP32-C3/: Kconfig
boards/ESP32/ESP32-S3/: Kconfig
boards/ESP32/config/: ESP32-S3.config
boards/T5AI/TUYA_T5AI_BOARD/: tuya_t5ai_board.c  tuya_t5ai_ex_module.h
examples/graphics/lvgl_demo/: flahs.sh
examples/multimedia/audio/audio_recorder/src/: example_recorder.c
examples/multimedia/audio/audio_speaker/src/: speaker_play.c
